--- a/app/modules/icon/template.hbs
+++ b/app/modules/icon/template.hbs
@@ -1,606 +1,36 @@
 <section class="incon-container">
-	<h3>Icon</h3>
-	<table class="table">
-		<thead class="thead-ligth">
-			<th>name</th>
-			<th>show</th>
-			<th>code</th>
-		</thead>
-		<tbody>
-			<tr class="vertical-middle">
-				<td>abord</td>
-				<td>{{bp-icon icon='abord'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{abord}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>add</td>
-				<td>{{bp-icon icon='add'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{add}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>calendar</td>
-				<td>{{bp-icon icon='calendar'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{calendar}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>check-circle</td>
-				<td>{{bp-icon icon='check-circle'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{check-circle}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>check-circle</td>
-				<td local-class="icon">{{bp-icon icon='check-circle' }}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{check-circle}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>chevron-next-year</td>
-				<td>{{bp-icon icon='chevron-next-year'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{chevron-next-year}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>china-money</td>
-				<td>{{bp-icon icon='china-money'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{chinaMoney}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>credit-card</td>
-				<td>{{bp-icon icon='credit-card'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{creditCard}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>cross</td>
-				<td>{{bp-icon icon='cross'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{cross}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>dashboard</td>
-				<td>{{bp-icon icon='dashboard'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{dashboard}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>data</td>
-				<td>{{bp-icon icon='data'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{data}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>down</td>
-				<td>{{bp-icon icon='down'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{down}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>download</td>
-				<td>{{bp-icon icon='download'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{download}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>edit</td>
-				<td>{{bp-icon icon='edit'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{edit}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>email</td>
-				<td>{{bp-icon icon='email'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{email}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>error</td>
-				<td>{{bp-icon icon='error'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{error}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>export</td>
-				<td>{{bp-icon icon='export'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{export}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>female</td>
-				<td>{{bp-icon icon='female'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{female}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>growth</td>
-				<td>{{bp-icon icon='growth'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{growth}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>history</td>
-				<td>{{bp-icon icon='history'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{history}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>hospital-building</td>
-				<td>{{bp-icon icon='hospital-building'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{hospitalBuilding}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>hospital-sign</td>
-				<td>{{bp-icon icon='hospital-sign'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{hospitalSign}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>image</td>
-				<td>{{bp-icon icon='image'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{image}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>increase</td>
-				<td>{{bp-icon icon='increase'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{increase}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>info</td>
-				<td>{{bp-icon icon='info'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{info}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>left</td>
-				<td>{{bp-icon icon='left'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{left}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>male</td>
-				<td>{{bp-icon icon='male'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{male}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>management</td>
-				<td>{{bp-icon icon='management'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{management}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>marketplace</td>
-				<td>{{bp-icon icon='marketplace'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{marketplace}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>meeting-quota</td>
-				<td>{{bp-icon icon='meeting-quota'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{meetingQuota}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>mission-1</td>
-				<td>{{bp-icon icon='mission-1'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{mission-1}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>mission-2</td>
-				<td>{{bp-icon icon='mission-2'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{mission-2}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>mission-3</td>
-				<td>{{bp-icon icon='mission-3'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{mission-3}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>mission-4</td>
-				<td>{{bp-icon icon='mission-4'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{mission-4}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>more</td>
-				<td>{{bp-icon icon='more'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{more}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>nav-person</td>
-				<td>{{bp-icon icon='nav-person'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{nav-person}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>notification</td>
-				<td>{{bp-icon icon='notification'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{notification}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>office-building</td>
-				<td>{{bp-icon icon='office-building'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{office-building}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>pc</td>
-				<td>{{bp-icon icon='pc'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{pc}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>people</td>
-				<td>{{bp-icon icon='people'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{people}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>person</td>
-				<td>{{bp-icon icon='person'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{person}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>pie</td>
-				<td>{{bp-icon icon='pie'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{pie}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>pill</td>
-				<td>{{bp-icon icon='pill'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{pill}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>point</td>
-				<td>{{bp-icon icon='point'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{point}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>pre-year</td>
-				<td>{{bp-icon icon='pre-year'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{pre-year}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>preferences</td>
-				<td>{{bp-icon icon='preferences'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{preferences}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>priority-high</td>
-				<td>{{bp-icon icon='priority-high'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{priorityHigh}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>priority-low</td>
-				<td>{{bp-icon icon='priority-low'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{priorityLow}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>product</td>
-				<td>{{bp-icon icon='product'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{product}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>product-info</td>
-				<td>{{bp-icon icon='product-info'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{productInfo}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>qr</td>
-				<td>{{bp-icon icon='qr'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{qr}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>raised-hand</td>
-				<td>{{bp-icon icon='raised-hand'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{raisedHand}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>representative</td>
-				<td>{{bp-icon icon='representative'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{representative}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>right</td>
-				<td>{{bp-icon icon='right'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{right}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>search</td>
-				<td>{{bp-icon icon='search'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{search}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>sign-out</td>
-				<td>{{bp-icon icon='sign-out'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{signOut}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>story</td>
-				<td>{{bp-icon icon='story'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{story}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>target</td>
-				<td>{{bp-icon icon='target'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{targetIcon}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>teaching-center</td>
-				<td>{{bp-icon icon='teaching-center'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{teaching-center}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>team</td>
-				<td>{{bp-icon icon='team'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{team}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>time</td>
-				<td>{{bp-icon icon='time'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{time}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>time-left</td>
-				<td>{{bp-icon icon='time-left'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{timeLeft}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>trash</td>
-				<td>{{bp-icon icon='trash'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{trash}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>up</td>
-				<td>{{bp-icon icon='up'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{up}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>upload</td>
-				<td>{{bp-icon icon='upload'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{upload}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>warning</td>
-				<td>{{bp-icon icon='warning'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{warning}}
-					{{/code-block}}
-				</td>
-			</tr>
-		</tbody>
-	</table>
+	<h2>Icon</h2>
+	<p>提供了一些目前项目中可能会用到的 icon 。</p>
+	<h3>使用方法</h3>
+	<p>通过使用 bp-icon 这个组件，将要使用的 iconName 传递给此组件的 icon 属性即可。</p>
+	<p>{{bp-icon icon='abord'}}、{{bp-icon icon='add'}}、{{bp-icon icon='check-circle'}}</p>
+	<p>
+		{{#code-block src="template.hbs" language='handlebars'}}
+			{{overview}}
+		{{/code-block}}
+	</p>
+	<p>如果需要更改图标的颜色，可以使用以下方式</p>
+	<p local-class="colorful">{{bp-icon icon='abord'}}、{{bp-icon icon='add'}}、{{bp-icon icon='check-circle'}}</p>
+	<p>
+		{{#code-block src="template.hbs" language='handlebars'}}
+			{{overviewColorful}}
+		{{/code-block}}
+	</p>
+	<p>当有的图表的颜色是写在了图标的 svg 代码内的时候，需要使用另一种方式更改颜色</p>
+	<p local-class="inside-colorful">{{bp-icon icon='check-circle'}}</p>
+	<p>
+		{{#code-block src="template.hbs" language='handlebars'}}
+			{{insideColorful}}
+		{{/code-block}}
+	</p>
+	<h3>图表集合</h3>
+	<p>点击即可复制到 handlebars 文件中使用</p>
+	{{#bp-layout main='' wrap=true local-class='icons-container'}}
+		{{#each icons as |icon|}}
+			{{#bp-layout direction='col' main='around' local-class='icon-container' click=(action 'copy' icon)}}
+				<p>{{bp-icon icon=icon}}</p>
+				<p>{{icon}}</p>
+			{{/bp-layout}}
+		{{/each}}
+	{{/bp-layout}}
 </section>
