--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -1,4 +1,9 @@
-<h2 local-class="title" class="text-center  bg-info" id="title">Welcome to BP-Components-UI</h2>
+{{!-- <h1 local-class="title" class="text-center bg-info" id="title">BP-Components-UI</h1> --}}
+{{#bp-layout tagName='h1' local-class='title' classNames='border-bottom' id='title' main='between'}}
+	<img src="ph_logo.png" alt="">
+	<span>BP-Components-UI</span>
+	<span local-class='version'>v0.2.0</span>
+{{/bp-layout}}
 <section local-class="container">
 	<aside>
 		<nav>
@@ -6,7 +11,7 @@
 				{{#n.link-to "default"}}{{bp-icon icon='story'}}<span class="ml-2">Default</span>{{/n.link-to}}
 				{{#n.link-to "theme-colors"}}{{bp-icon icon='data'}}<span class="ml-2">Theme-Colors</span>{{/n.link-to}}
 				{{#n.link-to "layout"}}
-					{{bp-icon icon='dashboard'}}<span class="ml-2">Layout</span>
+					{{bp-icon icon='dashboard'}}<span class="ml-2">Container 布局器</span>
 				{{/n.link-to}}
 				{{#n.link-to "icon"}}{{bp-icon icon='check-circle'}}<span class="ml-2">Icon</span>{{/n.link-to}}
 				{{#n.link-to "dashboard"}}{{bp-icon icon='dashboard'}}<span
@@ -64,7 +69,7 @@
 			{{/bp-nav}}
 		</nav>
 	</aside>
-	<section local-class="content">
+	<section local-class="content" class='p-4'>
 		{{outlet}}
 	</section>
 </section>
