--- a/app/modules/default/template.hbs
+++ b/app/modules/default/template.hbs
@@ -1,6 +1,6 @@
 <section class="default-container">
-	<h3>项目中默认的一些样式</h3>
-	<h4>字体家族</h4>
+	<h2>项目中的一些样式</h2>
+	<h3>字体家族</h3>
 	<p>为了维护在不同系统以及浏览器的显示下，字体始终保持良好的“易读性”和“可读性”，体现了友好、 稳定和专业的特性。采用以下 字体规范：
 	</p>
 	<p>
@@ -10,10 +10,12 @@
 		"Helvetica Neue", Helvetica, Arial, sans-serif;
 		</code>
 	</p>
-	<h4>字体设置</h4>
+	<h3>字体设置</h3>
 	<table class="table" local-class="font-setting">
 		<thead class="thead-dark">
-			<th>position</th>
+			<th>
+				style name
+			</th>
 			<th>example</th>
 			<th>weight/LH</th>
 			<th>color</th>
@@ -94,7 +96,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<h4>Font Size</h4>
+	<h3>Font Size</h3>
 	<table local-class="table-1" class="table">
 		<thead class="thead-dark">
 			<th>字体大小</th>
@@ -117,7 +119,7 @@
 			<td>用于正文内容，按钮</td>
 		</tr>
 	</table>
-	<h4>字阶与行高</h4>
+	<h3>字阶与行高</h3>
 	<table class="table">
 		<tr>
 			<td>FontSize</td>
@@ -148,7 +150,7 @@
 			<td>...</td>
 		</tr>
 	</table>
-	<h4>Font Color</h4>
+	<h3>Font Color</h3>
 	<table class="table" local-class="table-2">
 		<thead class="thead-dark">
 			<th></th>
