--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -53,7 +53,8 @@
 						no-button{{/dd.link-to}}
 				{{/n.dropdown}}
 				{{#n.link-to "page-header"}}{{bp-icon icon='management'}}Page-Header{{/n.link-to}}
-				{{#n.link-to "pagination" }}{{bp-icon icon='management'}}Pagination{{/n.link-to}}
+				{{#n.link-to "pagination" }}{{bp-icon icon='teaching-center'}}<span class="ml-2">Pagination
+						分页</span>{{/n.link-to}}
 				{{#n.dropdown title='Charts' icon="growth" as |dd|}}
 					{{#dd.link-to "line"}}
 						Chart-Line{{/dd.link-to}}
