--- a/app/modules/pagination/template.hbs
+++ b/app/modules/pagination/template.hbs
@@ -1,32 +1,58 @@
-<h3>bp-pagination</h3>
-<p>one page</p>
+<h2>bp-pagination</h2>
+<p>使用此组件进行分页查询、分页显示等操作</p>
+<h3>使用方式</h3>
+<p>
+	组件接受一个必须的属性： totalPageCounts(Number) - 表示分页的总页数；
+	另一个可选的属性：showJump(Boolean) - 控制是否展示跳转功能。
+</p>
+<p>
+	此组件只有一个方法：onClickPage,实参为要跳转的页码。
+</p>
+<p>以下是一些实例：</p>
+<h5>最基础的使用方式：</h5>
 {{bp-pagination
-	totalPageCounts=1
-	onClickPage=(action ( mut onlyonepage))}}
-<p>{{onlyonepage}}</p>
+	totalPageCounts=5
+	onClickPage=(action 'changePageOne')}}
+<div class="dropdown-divider"></div>
+<p>当前页码：
+	{{#if pageExamOne}}
+		{{pageExamOne}}
+	{{else}}
+		1
+	{{/if}}</p>
 {{#code-block src="template.hbs" language='handlebars' }}
 	{{onePage}}
 {{/code-block}}
 <div class="dropdown-divider"></div>
+<h5>使用跳转功能:</h5>
 {{bp-pagination
 	totalPageCounts=5
+	showJump=true
 	onClickPage=(action ( mut handlePage))}}
-<p>{{handlePage}}</p>
+<div class="dropdown-divider"></div>
+<p>当前页码：
+	{{#if handlePage}}
+		{{handlePage}}
+	{{else}}
+		1
+	{{/if}}</p>
 {{#code-block src="template.hbs" language='handlebars' }}
 	{{lessSeven}}
 {{/code-block}}
 <div class="dropdown-divider"></div>
-{{bp-pagination
+<h5>当分页总数目大于 7 或者 更大的时候的一些样式展示:</h5>
+{{!-- {{bp-pagination
 	totalPageCounts=7
 	onClickPage=(action ( mut handlePage12))}}
 <p>{{handlePage12}}</p>
 {{#code-block src="template.hbs" language='handlebars' }}
 	{{sevenPage}}
 {{/code-block}}
-<div class="dropdown-divider"></div>
+<div class="dropdown-divider"></div> --}}
 {{bp-pagination
 	totalPageCounts=10
 	onClickPage=(action ( mut handlePage2))}}
+<div class="dropdown-divider"></div>
 <p>{{handlePage2}}</p>
 {{#code-block src="template.hbs" language='handlebars' }}
 	{{moreThanSeven}}
@@ -40,20 +66,31 @@
 	{{tooMore}}
 {{/code-block}}
 <div class="dropdown-divider"></div>
-<h4>bp-pagination-mini</h4>
+<h5>只有简单的左右分页箭头：</h5>
+{{!-- <h4>bp-pagination-mini</h4> --}}
 {{bp-pagination/mini
 	totalPageCounts=5 
 	onClickPage=(action (mut handlePageMini))}}
-<p>{{handlePageMini}}</p>
+<p>当前页码：
+	{{#if handlePageMini}}
+		{{handlePageMini}}
+	{{else}}
+		1
+	{{/if}}</p>
 {{#code-block src="template.hbs" language='handlebars' }}
 	{{mini}}
 {{/code-block}}
 <div class="dropdown-divider"></div>
-<h4>bp-pagination-simple</h4>
+<h5>包含当前页码以及总页码：</h5>
 {{bp-pagination/simple
 	totalPageCounts=55
 	onClickPage=(action (mut handlePageSimple))}}
-<p>{{handlePageSimple}}</p>
+<div class="dropdown-divider"></div>
+<p>当前页码：{{#if handlePageSimple}}
+		{{handlePageSimple}}
+	{{else}}
+		1
+	{{/if}}</p>
 {{#code-block src="template.hbs" language='handlebars' }}
 	{{simple}}
 {{/code-block}}
