增加了基础的字体/颜色的展示，以及 bp-icon 的展示

--- a/app/modules/application/styles.scss
+++ b/app/modules/application/styles.scss
@@ -11,9 +11,9 @@ body> :global(.ember-view) {
 .title {
     width: 1140px;
     margin: 0 auto;
-    padding: 10px 0;
-    height: 70px;
-    line-height: 50px;
+    // padding: 10px 0;
+    height: 64px;
+    // line-height: 50px;
 
     img {
         height: 50px;
