--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -1,5 +1,5 @@
 {{!-- <h1 local-class="title" class="text-center bg-info" id="title">BP-Components-UI</h1> --}}
-{{#bp-layout tagName='h1' local-class='title' classNames='border-bottom' id='title' main='between'}}
+{{#bp-layout tagName='h1' local-class='title' classNames='border-bottom' id='title' main='between' cross='center'}}
 	<img src="ph_logo.png" alt="">
 	<span>BP-Components-UI</span>
 	<span local-class='version'>v0.2.0</span>
