--- a/app/modules/layout/styles.scss
+++ b/app/modules/layout/styles.scss
@@ -1,59 +1,158 @@
 .layout-container {
-	width: 100%;
-	.layout-demo {
-		width: 100%;
-		min-height: 220px;
-		background-color: rgba(#000, 0.3);
+    width: 100%;
 
-		div {
-			// flex: 1;
-			width: 100px;
-			height: 100px;
-			line-height: 100px;
-			font-size: 24px;
-			color: #FFF;
-			text-align: center;
-		}
+    .basic-layout {
+        height: 768px;
 
-		& div:first-child {
-			// height: 140px;
-			background-color: lightgray;
-		}
+        .basic-layout-container {
+            height: 100%;
 
-		& div:nth-child(2) {
-			// height: 200px;
-			background-color: lightcoral;
-		}
+            nav {
+                flex: 0 0 64px;
+                background-color: #162D4D;
+                color: #FFFFFF;
+            }
 
-		& div:nth-child(3) {
-			// height: 180px;
-			background-color: lightseagreen;
-		}
+            .container {
+                flex: 1;
 
-		& div:nth-child(4) {
-			// height: 120px;
-			background-color: lightcyan;
-		}
+                aside {
+                    flex: 0 0 240px;
+                    background-color: #162D4D;
 
-		& div:nth-child(5) {
-			// height: 140px;
-			background-color: lightsalmon;
-		}
+                    p {
+                        margin: 0;
+                        text-align: center;
+                        color: #FFFFFF;
+                        letter-spacing: 2.86px;
+                    }
 
-		& div:nth-child(6) {
-			// height: 140px;
-			background-color: lightgoldenrodyellow;
-		}
+                    p.title {
+                        font-size: 40px;
+                    }
 
-		& div:nth-child(7) {
-			// height: 140px;
-			background-color: lightpink;
-		}
+                    p.desc {
+                        font-size: 14px;
+                    }
+                }
 
-		& div:last-child {
-			// height: 160px;
-			background-color: orange;
-		}
-	}
+                .content {
+                    flex: 1;
+                    padding: 0 24px;
+                    position: relative;
 
+                    .column-other {
+                        position: absolute;
+                        left: 24px;
+                        right: 24px;
+                        height: 350px;
+
+                        .column-4 {
+                            flex: 4;
+                            margin-right: 8px;
+                        }
+
+                        .column-8 {
+                            flex: 8;
+                        }
+
+                        .column-4,
+                        .column-8 {
+                            opacity: .6;
+                            background-color: #c3d8eb;
+                        }
+
+                    }
+
+                    .column-desc {
+                        position: absolute;
+                        bottom: 24px;
+                        left: 50%;
+                        transform: translateX(-50%);
+                        background-color: #eee;
+                        opacity: .7;
+                        padding: 24px;
+                    }
+
+                    .column {
+                        flex: 1;
+                        margin-right: 8px;
+                        background-color: #D2EEFD;
+                    }
+
+                }
+            }
+        }
+    }
+
+    .layout-demo {
+        width: 100%;
+        min-height: 220px;
+        background-color: rgba(#000, 0.3);
+
+        div {
+            // flex: 1;
+            width: 100px;
+            height: 100px;
+            line-height: 100px;
+            font-size: 24px;
+            color: #FFF;
+            text-align: center;
+
+            &.wrap {
+                width: 200px;
+            }
+        }
+
+        & div:first-child {
+            // height: 140px;
+            background-color: lightgray;
+        }
+
+        & div:nth-child(2) {
+            // height: 200px;
+            background-color: lightcoral;
+        }
+
+        & div:nth-child(3) {
+            // height: 180px;
+            background-color: lightseagreen;
+        }
+
+        & div:nth-child(4) {
+            // height: 120px;
+            background-color: lightcyan;
+        }
+
+        & div:nth-child(5) {
+            // height: 140px;
+            background-color: lightsalmon;
+        }
+
+        & div:nth-child(6) {
+            // height: 140px;
+            background-color: lightgoldenrodyellow;
+        }
+
+        & div:nth-child(7) {
+            // height: 140px;
+            background-color: lightpink;
+        }
+
+        & div:last-child {
+            // height: 160px;
+            background-color: orange;
+        }
+    }
+
+    .code {
+        padding: 8px 16px;
+        border-radius: 5px;
+        background-color: #000;
+        color: #fff;
+
+        span {
+            color: lightgreen;
+        }
+    }
 }
