--- a/app/modules/theme-colors/template.hbs
+++ b/app/modules/theme-colors/template.hbs
@@ -1,4 +1,151 @@
-<h3>Colors</h3>
+<h2>Colors</h2>
+<p>将项目中用到的颜色展示出来，共使用者查阅</p>
+<h3>基础颜色</h3>
+<p>中性色的应用
+	灰色（Gray）作为中性色在网页设计中被大量使用到，它的使用有利于关键内容的衬托和功能的引导。
+	这类色彩主要体现在导航框架、背景底色、描边、或次级操作等等。</p>
+<p>以n900为基础，通过alpha的变化来拓展色阶</p>
+<table class="table" local-class='table-0'>
+	<thead>
+		<tr>
+			<th colspan="3">Neutrals</th>
+			<th colspan="3">Neutral Alpha </th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td><span local-class='n900'>n900</span></td>
+			<td><span local-class='n400'>n400</span></td>
+			<td><span local-class='n050'>n050</span></td>
+			<td><span local-class='n900a'>n900a</span></td>
+			<td><span local-class='n400a'>n400a</span></td>
+			<td><span local-class='n50a'>n50a</span></td>
+		</tr>
+		<tr>
+			<td><span local-class='n800'>n800</span></td>
+			<td><span local-class='n300'>n300</span></td>
+			<td><span local-class='n040'>n040</span></td>
+			<td><span local-class='n800a'>n800a</span></td>
+			<td><span local-class='n300a'>n300a</span></td>
+			<td><span local-class='n040a'>n040a</span></td>
+		</tr>
+		<tr>
+			<td><span local-class='n600'>n600</span></td>
+			<td><span local-class='n200'>n200</span></td>
+			<td><span local-class='n030'>n030</span></td>
+			<td><span local-class='n600a'>n600a</span></td>
+			<td><span local-class='n200a'>n200a</span></td>
+			<td><span local-class='n030a'>n030a</span></td>
+		</tr>
+		<tr>
+			<td><span local-class='n500'>n500</span></td>
+			<td><span local-class='n100'>n100</span></td>
+			<td><span local-class='n020'>n020</span></td>
+			<td><span local-class='n500a'>n500a</span></td>
+			<td><span local-class='n100a'>n100a</span></td>
+			<td><span local-class='n020a'>n020a</span></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td><span local-class='n090'>n090</span></td>
+			<td><span local-class='n010'>n010</span></td>
+			<td></td>
+			<td><span local-class='n090a'>n090a</span></td>
+			<td><span local-class='n010a'>n010a</span></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td><span local-class='n080'>n080</span></td>
+			<td><span local-class='n000'>n000</span></td>
+			<td></td>
+			<td><span local-class='n080a'>n080a</span></td>
+			<td><span local-class='n000a'>n000a</span></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td><span local-class='n060'>n060</span></td>
+			<td></td>
+			<td></td>
+			<td><span local-class='n060a'>n060a</span></td>
+			<td></td>
+		</tr>
+	</tbody>
+</table>
+<div class="dropdown-divider"></div>
+<h3>功能颜色</h3>
+<p>功能色的应用
+	UI 设计中，比较稳定的色彩除了中性色外还有具备特定含义的功能色，这类色彩起到传递功能信息、
+	代表某种状态等作用。主要应用于消息通知、反馈提醒、表单校验这类场景中的成功、出错、失败、提醒、链接等状态。</p>
+<table class="table" local-class='table-01'>
+	<thead>
+		<tr>
+			<td>Primary</td>
+			<td>Red-error</td>
+			<td>Yellow-warning</td>
+			<td>Green-success</td>
+			<td>Teals-access</td>
+			<td>Purples-support</td>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td><span local-class='b500'>b500</span></td>
+			<td><span local-class='r500'>r500</span></td>
+			<td><span local-class='y500'>y500</span></td>
+			<td><span local-class='g500'>g500</span></td>
+			<td><span local-class='t500'>t500</span></td>
+			<td><span local-class='p500'>p500</span></td>
+		</tr>
+		<tr>
+			<td><span local-class='b400'>b400</span></td>
+			<td><span local-class='r400'>r400</span></td>
+			<td><span local-class='y400'>y400</span></td>
+			<td><span local-class='g400'>g400</span></td>
+			<td><span local-class='t400'>t400</span></td>
+			<td><span local-class='p400'>p400</span></td>
+		</tr>
+		<tr>
+			<td><span local-class='b300'>b300</span></td>
+			<td><span local-class='r300'>r300</span></td>
+			<td><span local-class='y300'>y300</span></td>
+			<td><span local-class='g300'>g300</span></td>
+			<td><span local-class='t300'>t300</span></td>
+			<td><span local-class='p300'>p300</span></td>
+		</tr>
+		<tr>
+			<td><span local-class='b200'>b200</span></td>
+			<td><span local-class='r200'>r200</span></td>
+			<td><span local-class='y200'>y200</span></td>
+			<td><span local-class='g200'>g200</span></td>
+			<td><span local-class='t200'>t200</span></td>
+			<td><span local-class='p200'>p200</span></td>
+		</tr>
+		<tr>
+			<td><span local-class='b100'>b100</span></td>
+			<td><span local-class='r100'>r100</span></td>
+			<td><span local-class='y100'>y100</span></td>
+			<td><span local-class='g100'>g100</span></td>
+			<td><span local-class='t100'>t100</span></td>
+			<td><span local-class='p100'>p100</span></td>
+		</tr>
+		<tr>
+			<td><span local-class='b075'>b075</span></td>
+			<td><span local-class='r75'>r75</span></td>
+			<td><span local-class='y75'>y75</span></td>
+			<td><span local-class='g75'>g75</span></td>
+			<td><span local-class='t75'>t75</span></td>
+			<td><span local-class='p75'>p75</span></td>
+		</tr>
+		<tr>
+			<td><span local-class='b050'>b050</span></td>
+			<td><span local-class='r50'>r50</span></td>
+			<td><span local-class='y50'>y50</span></td>
+			<td><span local-class='g50'>g50</span></td>
+			<td><span local-class='t50'>t50</span></td>
+			<td><span local-class='p50'>p50</span></td>
+		</tr>
+	</tbody>
+</table>
 <table class="table" local-class="table-1">
 	<thead class="thead">
 		<th></th>
