date-picker 的展示

--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -13,6 +13,9 @@
 				{{#n.link-to "layout"}}
 					{{bp-icon icon='dashboard'}}<span class="ml-2">Container 布局器</span>
 				{{/n.link-to}}
+				{{#n.link-to "datepicker"}}
+					{{bp-icon icon='time'}}<span class="ml-2">DatePicker 时间选择</span>
+				{{/n.link-to}}
 				{{#n.link-to "icon"}}{{bp-icon icon='check-circle'}}<span class="ml-2">Icon</span>{{/n.link-to}}
 				{{#n.link-to "dashboard"}}{{bp-icon icon='dashboard'}}<span
 						class="ml-2">CustomChart</span>{{/n.link-to}}
