--- a/app/modules/dashboard/template.hbs
+++ b/app/modules/dashboard/template.hbs
@@ -39,37 +39,37 @@
 		{{bp-row direction='col'  rowModel=model.tmProductCircle1 conditions=model.tmProductCircle0Condition}}
 	</div>
 {{/bp-layout}}
-{{!-- {{bp-row direction='col' rowModel=model.tmProductBarLine0 conditions=model.tmProductBarLineCondition}} --}}
+{{bp-row direction='col' rowModel=model.tmProductBarLine0 conditions=model.tmProductBarLineCondition}}
 <div class="dropdown-divider"></div>
 <h4>历史销售报告-区域销售报告</h4>
 {{#bp-layout}}
 	<div local-class='circle-left'>
-		{{bp-row direction='col' rowModel=model.tmRegionCircle0 condition=model.tmProductCircle0Condition}}
+		{{bp-row direction='col' rowModel=model.tmRegionCircle0 conditions=model.tmRegionCircleCondition}}
 	</div>
 	<div local-class='circle-right'>
-		{{bp-row direction='col'  rowModel=model.tmRegionCircle1}}
+		{{bp-row direction='col'  rowModel=model.tmRegionCircle1 conditions=model.tmRegionCircleCondition}}
 	</div>
 {{/bp-layout}}
-{{bp-row direction='col' rowModel=model.tmRegionBarLine0}}
+{{bp-row direction='col' rowModel=model.tmRegionBarLine0 conditions=model.tmRegionBarLineCondition}}
 <div class="dropdown-divider"></div>
 <h4>历史销售报告-代表销售报告</h4>
 {{#bp-layout}}
 	<div local-class='circle-left'>
-		{{bp-row direction='col' rowModel=model.tmRepresentativeCircle0}}
+		{{bp-row direction='col' rowModel=model.tmRepresentativeCircle0 conditions=model.tmRepresentativeCircleCondition}}
 	</div>
 	<div local-class='circle-right'>
-		{{bp-row direction='col'  rowModel=model.tmRepresentativeCircle1}}
+		{{bp-row direction='col'  rowModel=model.tmRepresentativeCircle1 conditions=model.tmRepresentativeCircleCondition}}
 	</div>
 {{/bp-layout}}
-{{bp-row direction='col' rowModel=model.tmRepresentativeBarLine0}}
+{{bp-row direction='col' rowModel=model.tmRepresentativeBarLine0  conditions=model.tmRepresentativeBarLineCondition}}
 <div class="dropdown-divider"></div>
 <h4>历史销售报告-医院销售报告</h4>
 {{#bp-layout}}
 	<div local-class='circle-left'>
-		{{bp-row direction='col' rowModel=model.tmHospitalCircle0}}
+		{{bp-row direction='col' rowModel=model.tmHospitalCircle0 conditions=model.tmHospitalCircleCondition}}
 	</div>
 	<div local-class='circle-right'>
-		{{bp-row direction='col'  rowModel=model.tmHospitalCircle1}}
+		{{bp-row direction='col'  rowModel=model.tmHospitalCircle1 conditions=model.tmHospitalCircleCondition}}
 	</div>
 {{/bp-layout}}
-{{bp-row direction='col' rowModel=model.tmHospitalBarLine0}}
+{{bp-row direction='col' rowModel=model.tmHospitalBarLine0 conditions=model.tmHospitalBarLineCondition}}
