动态图表接口

--- a/app/modules/dashboard/template.hbs
+++ b/app/modules/dashboard/template.hbs
@@ -24,6 +24,9 @@
 <div class="dropdown-divider"></div>
 <h2>This chart for stack - bar</h2>
 {{bp-row direction='col' rowModel=model.barStack}} --}}
+<h3>Monitoring example</h3>
+<h4>CPU</h4>
+{{bp-row direction='col' rowModel=model.monitoring conditions=model.monitoringCondition}}
 <h3>TMIST Charts</h3>
 <h4>参考信息-团队成员信息</h4>
 {{bp-row direction='col' rowModel=model.tmRadar conditions=model.tmRadarCondition}}
