重写了主页面。

--- a/app/modules/icon/styles.scss
+++ b/app/modules/icon/styles.scss
@@ -27,6 +27,11 @@
 
         &:hover {
             color: lightblue;
+            svg {
+                path {
+                    fill: lightblue;
+                }
+            }
         }
     }
 }
