--- a/app/modules/theme-colors/template.hbs
+++ b/app/modules/theme-colors/template.hbs
@@ -146,7 +146,7 @@
 		</tr>
 	</tbody>
 </table>
-<table class="table" local-class="table-1">
+{{!-- <table class="table" local-class="table-1">
 	<thead class="thead">
 		<th></th>
 		<th></th>
@@ -346,4 +346,4 @@
 		</td>
 		<td>#F04864</td>
 	</tr>
-</table>
+</table> --}}
