--- a/app/modules/chart-radar/template.hbs
+++ b/app/modules/chart-radar/template.hbs
@@ -7,3 +7,9 @@
 	{{bp-radar
 		eid="radarSecond"}}
 </div>
+<div local-class="simple-bar">
+	<h2>click radar axis name is {{axisName}}</h2>
+	{{bp-radar-ability
+		eid="radarSecond22"
+		onClick=(action 'changeRadar')}}
+</div>
