--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -42,6 +42,7 @@
 				{{#n.link-to "progress"}}{{bp-icon icon='management'}}Progress{{/n.link-to}}
 				{{#n.link-to "modal"}}{{bp-icon icon='management'}}Modal{{/n.link-to}}
 				{{#n.link-to "tabs"}}{{bp-icon icon='management'}}Tabs{{/n.link-to}}
+				{{#n.link-to "table"}}{{bp-icon icon='product-info'}}<span class="ml-2">Table</span>{{/n.link-to}}
 				{{#n.link-to "badge"}}{{bp-icon icon='management'}}Badge{{/n.link-to}}
 				{{#n.dropdown title='Empty-State' icon="management" as |dd|}}
 					{{#dd.link-to "empty-state"}}
