基础表格的展示

--- a/app/modules/table/template.hbs
+++ b/app/modules/table/template.hbs
@@ -1,4 +1,4 @@
-{{bp-table}}
+{{bp-table columns=model.columns data=model.tableData}}
 <div class="dropdown-dividier"></div>
 {{!-- <h3>add border</h3>
 {{bp-table bodyBorder=true}}
