增加格式化 phase 的展示

--- a/app/modules/chart-circle/template.hbs
+++ b/app/modules/chart-circle/template.hbs
@@ -4,7 +4,9 @@
 		eid="circleone"
 		circleData=model.circleData
 		circleColor=model.circleColor
-		labelEmphasis=false}}
+		circleSize=model.circleSize
+		labelEmphasis=true
+		label=true}}
 </div>
 <div class="dropdown-divider"></div>
 <h2>bp-circle/tm</h2>
