--- a/app/modules/table/template.hbs
+++ b/app/modules/table/template.hbs
@@ -1,7 +1,8 @@
 {{bp-table columns=model.columns data=model.tableData}}
 <div class="dropdown-dividier"></div>
-{{!-- <h3>add border</h3>
-{{bp-table bodyBorder=true}}
+<h3>add border</h3>
+{{bp-table columns=model.columns data=model.tableData rowBorder=true}}
+
 <h3>remove hover</h3>
-{{bp-table rowHover=false}} --}}
+{{bp-table columns=model.columns data=model.tableData  rowHover=false}}
 
